Update SRGAN .ipynb

--- a/SRGAN .ipynb
+++ b/SRGAN .ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "SRGAN.ipynb",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": []
     },
     "kernelspec": {
@@ -18,7 +17,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GXKRpUah8_uF"
+        "id": "GXKRpUah8_uF",
+        "outputId": "75d4cda0-671c-4d2e-cf04-949239f08763",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        }
       },
       "source": [
         "!apt-get install -y -qq software-properties-common python-software-properties module-init-tools\n",
@@ -46,7 +50,21 @@
         "import tensorflow as tf"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "E: Package 'python-software-properties' has no installation candidate\n",
+            "Selecting previously unselected package google-drive-ocamlfuse.\n",
+            "(Reading database ... 144611 files and directories currently installed.)\n",
+            "Preparing to unpack .../google-drive-ocamlfuse_0.7.23-0ubuntu1~ubuntu18.04.1_amd64.deb ...\n",
+            "Unpacking google-drive-ocamlfuse (0.7.23-0ubuntu1~ubuntu18.04.1) ...\n",
+            "Setting up google-drive-ocamlfuse (0.7.23-0ubuntu1~ubuntu18.04.1) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -55,6 +73,17 @@
       },
       "source": [
         "!nvidia-smi"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZXm1ao7cYHru"
+      },
+      "source": [
+        "!kill -9 -1"
       ],
       "execution_count": null,
       "outputs": []
@@ -89,6 +118,31 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_sx63VPiVHT-",
+        "outputId": "08a338c4-fc63-49e2-b342-ed5c32166eee",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 45
+        }
+      },
+      "source": [
+        "import sys\n",
+        "!test -d ipynb || git clone https://github.com/goldenbili/SRGAN_Test.git"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fatal: destination path 'SRGAN_Test' already exists and is not an empty directory.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -143,30 +197,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8fJ53TKWKeTC"
+        "id": "Gunmjw5QLaPS"
       },
       "source": [
-        "!pip install torch==1.4"
+        "!pip install torchvision==0.5"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_V9KdRQCB-q2"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "Gunmjw5QLaPS"
+        "id": "8fJ53TKWKeTC"
       },
       "source": [
-        "!pip install torchvision==0.5"
+        "!pip install torch==1.4"
       ],
       "execution_count": null,
       "outputs": []
