Update SRGAN .ipynb

--- a/SRGAN .ipynb
+++ b/SRGAN .ipynb
@@ -153,7 +153,7 @@
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
         "!unzip -q DIV2K_train_HR.zip -d data\n",
-        "!unzip -q DIV2K_valid_HR.zip -d data"
+        "!unzip -q DIV2K_valid_HR.zip -d data\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -167,9 +167,11 @@
         "!cp ../drive/My\\ Drive/SRGAN/DIV2K_train_HR.zip ./data/\n",
         "!cp ../drive/My\\ Drive/SRGAN/DIV2K_valid_HR.zip ./data/\n",
         "!unzip -q ./data/DIV2K_train_HR.zip -d data\n",
-        "!unzip -q ./data/DIV2K_valid_HR.zip -d data"
+        "!unzip -q ./data/DIV2K_valid_HR.zip -d data\n",
+        "!rm ./data/DIV2K_train_HR.zip\n",
+        "!rm ./data/DIV2K_valid_HR.zip"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -197,35 +199,93 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gunmjw5QLaPS"
+        "id": "Gunmjw5QLaPS",
+        "outputId": "a88f9838-433c-4c37-e82b-b16035ae2527",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 347
+        }
       },
       "source": [
         "!pip install torchvision==0.5"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting torchvision==0.5\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7e/90/6141bf41f5655c78e24f40f710fdd4f8a8aff6c8b7c6f0328240f649bdbe/torchvision-0.5.0-cp36-cp36m-manylinux1_x86_64.whl (4.0MB)\n",
+            "\u001b[K     |████████████████████████████████| 4.0MB 7.1MB/s \n",
+            "\u001b[?25hCollecting torch==1.4.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/24/19/4804aea17cd136f1705a5e98a00618cb8f6ccc375ad8bfa437408e09d058/torch-1.4.0-cp36-cp36m-manylinux1_x86_64.whl (753.4MB)\n",
+            "\u001b[K     |████████████████████████████████| 753.4MB 22kB/s \n",
+            "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (1.15.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (1.18.5)\n",
+            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (7.0.0)\n",
+            "Installing collected packages: torch, torchvision\n",
+            "  Found existing installation: torch 1.6.0+cu101\n",
+            "    Uninstalling torch-1.6.0+cu101:\n",
+            "      Successfully uninstalled torch-1.6.0+cu101\n",
+            "  Found existing installation: torchvision 0.7.0+cu101\n",
+            "    Uninstalling torchvision-0.7.0+cu101:\n",
+            "      Successfully uninstalled torchvision-0.7.0+cu101\n",
+            "Successfully installed torch-1.4.0 torchvision-0.5.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8fJ53TKWKeTC"
+        "id": "8fJ53TKWKeTC",
+        "outputId": "6658bec4-b9df-4a82-caf3-7072be71b0dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 64
+        }
       },
       "source": [
         "!pip install torch==1.4"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: torch==1.4 in /usr/local/lib/python3.6/dist-packages (1.4.0)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TDgDNUJ0GfJ0"
+        "id": "TDgDNUJ0GfJ0",
+        "outputId": "3f976cb8-66c7-45b0-861e-5984943b8a58",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 100
+        }
       },
       "source": [
         "! python train.py --upscale_factor 2 --num_epochs 500"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "# generator parameters: 586506\n",
+            "# discriminator parameters: 5215425\n",
+            "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /root/.cache/torch/checkpoints/vgg16-397923af.pth\n",
+            " 84% 445M/528M [00:19<00:03, 24.0MB/s]"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -246,7 +306,7 @@
       "source": [
         "!cp -R ./training_results ../drive/My\\ Drive/"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
