Update SRGAN .ipynb

--- a/SRGAN .ipynb
+++ b/SRGAN .ipynb
@@ -69,6 +69,83 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "UkY-4v1ByyXF"
+      },
+      "source": [
+        "# memory footprint support libraries/code\n",
+        "!ln -sf /opt/bin/nvidia-smi /usr/bin/nvidia-smi\n",
+        "!pip install gputil\n",
+        "!pip install psutil\n",
+        "!pip install humanize\n",
+        "import psutil\n",
+        "import humanize\n",
+        "import os\n",
+        "import GPUtil as GPU\n",
+        "GPUs = GPU.getGPUs()\n",
+        "# XXX: only one GPU on Colab and isn’t guaranteed\n",
+        "gpu = GPUs[0]\n",
+        "def printm():\n",
+        " process = psutil.Process(os.getpid())\n",
+        " print(\"Gen RAM Free: \" + humanize.naturalsize( psutil.virtual_memory().available ), \" | Proc size: \" + humanize.naturalsize( process.memory_info().rss))\n",
+        " print(\"GPU RAM Free: {0:.0f}MB | Used: {1:.0f}MB | Util {2:3.0f}% | Total {3:.0f}MB\".format(gpu.memoryFree, gpu.memoryUsed, gpu.memoryUtil*100, gpu.memoryTotal))\n",
+        "printm()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "guVoesClznIc"
+      },
+      "source": [
+        "import numpy as np\n",
+        "from keras.layers import Conv2D, MaxPooling2D, AveragePooling2D\n",
+        "from keras.layers import Dropout, Flatten, Dense\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers.advanced_activations import LeakyReLU\n",
+        "from keras.datasets import cifar10\n",
+        "(train_features, train_labels), (test_features, test_labels) = cifar10.load_data()\n",
+        "model = Sequential()\n",
+        "\n",
+        "model.add(Conv2D(filters=16, kernel_size=(2, 2), padding=\"same\", activation=\"relu\", input_shape=(train_features.shape[1:])))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), padding='same'))\n",
+        "\n",
+        "model.add(Conv2D(filters=32, kernel_size=(3, 3), padding=\"same\", activation=\"relu\"))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), padding='same'))\n",
+        "\n",
+        "model.add(Conv2D(filters=64, kernel_size=(4, 4), padding=\"same\", activation=\"relu\"))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2), padding='same'))\n",
+        "\n",
+        "model.add(Flatten())\n",
+        "\n",
+        "model.add(Dense(25600, activation=\"relu\"))\n",
+        "model.add(Dense(25600, activation=\"relu\"))\n",
+        "model.add(Dense(25600, activation=\"relu\"))\n",
+        "model.add(Dense(25600, activation=\"relu\"))\n",
+        "model.add(Dense(10, activation=\"softmax\"))\n",
+        "\n",
+        "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "model.fit(train_features, train_labels, validation_split=0.2, epochs=10, batch_size=128, verbose=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6FbTwfyTy71D"
+      },
+      "source": [
+        "!ps ax | grep python"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "CtmF7D_N-8yG"
       },
       "source": [
@@ -171,7 +248,7 @@
         "!rm ./data/DIV2K_train_HR.zip\n",
         "!rm ./data/DIV2K_valid_HR.zip"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +286,7 @@
       "source": [
         "!pip install torchvision==0.5"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +326,7 @@
       "source": [
         "!pip install torch==1.4"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +383,7 @@
       "source": [
         "!cp -R ./training_results ../drive/My\\ Drive/"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
