--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -18,11 +18,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GXKRpUah8_uF",
-        "outputId": "a531e055-6cc4-4484-95c2-e405f66e8689",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a609d03-1ca3-4c35-a921-4fdb4bf42db1"
       },
       "source": [
         "!apt-get install -y -qq software-properties-common python-software-properties module-init-tools\n",
@@ -49,17 +48,17 @@
         "import sys\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "E: Package 'python-software-properties' has no installation candidate\n",
             "Selecting previously unselected package google-drive-ocamlfuse.\n",
-            "(Reading database ... 144611 files and directories currently installed.)\n",
-            "Preparing to unpack .../google-drive-ocamlfuse_0.7.23-0ubuntu1~ubuntu18.04.1_amd64.deb ...\n",
-            "Unpacking google-drive-ocamlfuse (0.7.23-0ubuntu1~ubuntu18.04.1) ...\n",
-            "Setting up google-drive-ocamlfuse (0.7.23-0ubuntu1~ubuntu18.04.1) ...\n",
+            "(Reading database ... 146374 files and directories currently installed.)\n",
+            "Preparing to unpack .../google-drive-ocamlfuse_0.7.24-0ubuntu1~ubuntu18.04.1_amd64.deb ...\n",
+            "Unpacking google-drive-ocamlfuse (0.7.24-0ubuntu1~ubuntu18.04.1) ...\n",
+            "Setting up google-drive-ocamlfuse (0.7.24-0ubuntu1~ubuntu18.04.1) ...\n",
             "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
             "Please, open the following URL in a web browser: https://accounts.google.com/o/oauth2/auth?client_id=32555940559.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&response_type=code&access_type=offline&approval_prompt=force\n",
             "··········\n",
@@ -74,11 +73,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "UkY-4v1ByyXF",
-        "outputId": "121d371e-0d70-4595-e32f-c03ea6fec036",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 267
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c3caf000-29bd-4bdc-a98b-5b293e44e7c0"
       },
       "source": [
         "# memory footprint support libraries/code\n",
@@ -99,7 +97,7 @@
         " print(\"GPU RAM Free: {0:.0f}MB | Used: {1:.0f}MB | Util {2:3.0f}% | Total {3:.0f}MB\".format(gpu.memoryFree, gpu.memoryUsed, gpu.memoryUtil*100, gpu.memoryTotal))\n",
         "printm()"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,14 +106,14 @@
             "  Downloading https://files.pythonhosted.org/packages/ed/0e/5c61eedde9f6c87713e89d794f01e378cfd9565847d4576fa627d758c554/GPUtil-1.4.0.tar.gz\n",
             "Building wheels for collected packages: gputil\n",
             "  Building wheel for gputil (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for gputil: filename=GPUtil-1.4.0-cp36-none-any.whl size=7411 sha256=bc9ad2a530cbfc520e82fe3baa82995dfd0291f3616791b672b0d62179bdfdfc\n",
+            "  Created wheel for gputil: filename=GPUtil-1.4.0-cp36-none-any.whl size=7411 sha256=a4c50b165815d6f9660efa7b15b108c1518d41cc994d7074b8b7c3e8a6e1dae3\n",
             "  Stored in directory: /root/.cache/pip/wheels/3d/77/07/80562de4bb0786e5ea186911a2c831fdd0018bda69beab71fd\n",
             "Successfully built gputil\n",
             "Installing collected packages: gputil\n",
             "Successfully installed gputil-1.4.0\n",
             "Requirement already satisfied: psutil in /usr/local/lib/python3.6/dist-packages (5.4.8)\n",
             "Requirement already satisfied: humanize in /usr/local/lib/python3.6/dist-packages (0.5.1)\n",
-            "Gen RAM Free: 12.8 GB  | Proc size: 111.8 MB\n",
+            "Gen RAM Free: 12.7 GB  | Proc size: 348.4 MB\n",
             "GPU RAM Free: 15079MB | Used: 0MB | Util   0% | Total 15079MB\n"
           ],
           "name": "stdout"
@@ -176,11 +174,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CtmF7D_N-8yG",
-        "outputId": "1adf1922-6c37-4a88-c229-e19db7d05483",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 318
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c4c9935-d8fd-4d90-9007-33ded31f74af"
       },
       "source": [
         "!nvidia-smi"
@@ -190,7 +187,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Thu Oct 22 02:14:39 2020       \n",
+            "Mon Feb  1 06:03:02 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 418.67       Driver Version: 418.67       CUDA Version: 10.1     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -198,7 +195,7 @@
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   43C    P8     9W /  70W |      0MiB / 15079MiB |      0%      Default |\n",
+            "| N/A   44C    P8    10W /  70W |      0MiB / 15079MiB |      0%      Default |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -227,11 +224,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5SO8PBsJcsJ6",
-        "outputId": "4412aae5-bc4f-4b81-d469-23f6123162d8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39886168-b33b-421d-8d62-8d172a4f6b8e"
       },
       "source": [
         "# Load the Drive helper and mount\n",
@@ -239,7 +235,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,11 +267,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "_sx63VPiVHT-",
-        "outputId": "08a338c4-fc63-49e2-b342-ed5c32166eee",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 45
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b73f0c45-091d-45a9-9ee2-130a5cb42a8c"
       },
       "source": [
         "import sys\n",
@@ -286,12 +281,19 @@
         "%cd SRGAN_Test/\n",
         "!pwd  "
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'SRGAN_Test' already exists and is not an empty directory.\n"
+            "Cloning into 'SRGAN_Test'...\n",
+            "remote: Enumerating objects: 67, done.\u001b[K\n",
+            "remote: Counting objects: 100% (67/67), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (64/64), done.\u001b[K\n",
+            "remote: Total 67 (delta 23), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (67/67), done.\n",
+            "/content/SRGAN_Test\n",
+            "/content/SRGAN_Test\n"
           ],
           "name": "stdout"
         }
@@ -300,7 +302,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BDRTN4ZlBpEd"
+        "id": "BDRTN4ZlBpEd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc81662d-8ef5-4739-c762-a78532231bfe"
       },
       "source": [
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
@@ -310,8 +316,45 @@
         "!rm DIV2K_train_HR.zip\n",
         "!rm DIV2K_valid_HR.zip"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-02-01 06:49:15--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
+            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip [following]\n",
+            "--2021-02-01 06:49:15--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3530603713 (3.3G) [application/zip]\n",
+            "Saving to: ‘DIV2K_train_HR.zip’\n",
+            "\n",
+            "DIV2K_train_HR.zip  100%[===================>]   3.29G  17.8MB/s    in 3m 0s   \n",
+            "\n",
+            "2021-02-01 06:52:16 (18.7 MB/s) - ‘DIV2K_train_HR.zip’ saved [3530603713/3530603713]\n",
+            "\n",
+            "--2021-02-01 06:52:16--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
+            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip [following]\n",
+            "--2021-02-01 06:52:17--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 448993893 (428M) [application/zip]\n",
+            "Saving to: ‘DIV2K_valid_HR.zip’\n",
+            "\n",
+            "DIV2K_valid_HR.zip  100%[===================>] 428.19M  19.2MB/s    in 24s     \n",
+            "\n",
+            "2021-02-01 06:52:41 (18.1 MB/s) - ‘DIV2K_valid_HR.zip’ saved [448993893/448993893]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -355,36 +398,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "Gunmjw5QLaPS",
-        "outputId": "a88f9838-433c-4c37-e82b-b16035ae2527",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 347
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f9b818a2-f7de-42ce-cb9d-670a94547749"
       },
       "source": [
         "!pip install torchvision==0.5"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting torchvision==0.5\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7e/90/6141bf41f5655c78e24f40f710fdd4f8a8aff6c8b7c6f0328240f649bdbe/torchvision-0.5.0-cp36-cp36m-manylinux1_x86_64.whl (4.0MB)\n",
-            "\u001b[K     |████████████████████████████████| 4.0MB 7.1MB/s \n",
+            "\u001b[K     |████████████████████████████████| 4.0MB 8.8MB/s \n",
             "\u001b[?25hCollecting torch==1.4.0\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/24/19/4804aea17cd136f1705a5e98a00618cb8f6ccc375ad8bfa437408e09d058/torch-1.4.0-cp36-cp36m-manylinux1_x86_64.whl (753.4MB)\n",
-            "\u001b[K     |████████████████████████████████| 753.4MB 22kB/s \n",
-            "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (1.15.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (1.18.5)\n",
+            "\u001b[K     |████████████████████████████████| 753.4MB 15kB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (1.19.5)\n",
             "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (7.0.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (1.15.0)\n",
             "Installing collected packages: torch, torchvision\n",
-            "  Found existing installation: torch 1.6.0+cu101\n",
-            "    Uninstalling torch-1.6.0+cu101:\n",
-            "      Successfully uninstalled torch-1.6.0+cu101\n",
-            "  Found existing installation: torchvision 0.7.0+cu101\n",
-            "    Uninstalling torchvision-0.7.0+cu101:\n",
-            "      Successfully uninstalled torchvision-0.7.0+cu101\n",
+            "  Found existing installation: torch 1.7.0+cu101\n",
+            "    Uninstalling torch-1.7.0+cu101:\n",
+            "      Successfully uninstalled torch-1.7.0+cu101\n",
+            "  Found existing installation: torchvision 0.8.1+cu101\n",
+            "    Uninstalling torchvision-0.8.1+cu101:\n",
+            "      Successfully uninstalled torchvision-0.8.1+cu101\n",
             "Successfully installed torch-1.4.0 torchvision-0.5.0\n"
           ],
           "name": "stdout"
@@ -395,16 +437,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "8fJ53TKWKeTC",
-        "outputId": "6658bec4-b9df-4a82-caf3-7072be71b0dc",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 64
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b750548-c57a-4750-b149-fac868da9cf2"
       },
       "source": [
         "!pip install torch==1.4"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,24 +460,32 @@
       "cell_type": "code",
       "metadata": {
         "id": "TDgDNUJ0GfJ0",
-        "outputId": "3f976cb8-66c7-45b0-861e-5984943b8a58",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 100
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b6b0345-be67-429d-ba89-470ca209fae6"
       },
       "source": [
-        "! python train.py --upscale_factor 2 --num_epochs 300 --epochs_record 200"
+        "! python train.py \\\n",
+        "  --num_epochs 100 \\\n",
+        "  --use_cuda 1 \\\n",
+        "  --batch_size 1 \\\n",
+        "  --snapshots_folder /content/SRGAN_Test/snapshots/ \\\n",
+        "  --snapshots_train_data Epoch_4_TrainTimes_240000 \\\n",
+        "  --train_path /content/SRGAN_Test/data/DIV2K_train_HR/ \\\n",
+        "  --valid_path /content/SRGAN_Test/data/DIV2K_valid_HR/ \\\n",
+        "  --statistics_path statistics/ \\\n",
+        "  --epochs_path training_results/"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "# generator parameters: 586506\n",
-            "# discriminator parameters: 5215425\n",
-            "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /root/.cache/torch/checkpoints/vgg16-397923af.pth\n",
-            " 84% 445M/528M [00:19<00:03, 24.0MB/s]"
+            "Traceback (most recent call last):\n",
+            "  File \"train.py\", line 53, in <module>\n",
+            "    train_set = TrainDatasetFromFolder(TRAIN_PATH)\n",
+            "TypeError: __init__() missing 2 required positional arguments: 'bk_width' and 'bk_height'\n"
           ],
           "name": "stdout"
         }
