--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -21,7 +21,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a609d03-1ca3-4c35-a921-4fdb4bf42db1"
+        "outputId": "832dd310-312c-40e4-b8cd-a36ceedc4494"
       },
       "source": [
         "!apt-get install -y -qq software-properties-common python-software-properties module-init-tools\n",
@@ -97,7 +97,7 @@
         " print(\"GPU RAM Free: {0:.0f}MB | Used: {1:.0f}MB | Util {2:3.0f}% | Total {3:.0f}MB\".format(gpu.memoryFree, gpu.memoryUsed, gpu.memoryUtil*100, gpu.memoryTotal))\n",
         "printm()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +227,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "39886168-b33b-421d-8d62-8d172a4f6b8e"
+        "outputId": "2316d93a-1937-427e-eb44-80f5d13a94b3"
       },
       "source": [
         "# Load the Drive helper and mount\n",
@@ -270,7 +270,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b73f0c45-091d-45a9-9ee2-130a5cb42a8c"
+        "outputId": "9babc2df-47d7-4b9c-f0cb-5c9276eb0db0"
       },
       "source": [
         "import sys\n",
@@ -287,11 +287,11 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'SRGAN_Test'...\n",
-            "remote: Enumerating objects: 67, done.\u001b[K\n",
-            "remote: Counting objects: 100% (67/67), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (64/64), done.\u001b[K\n",
-            "remote: Total 67 (delta 23), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (67/67), done.\n",
+            "remote: Enumerating objects: 3, done.\u001b[K\n",
+            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 79 (delta 0), reused 0 (delta 0), pack-reused 76\u001b[K\n",
+            "Unpacking objects: 100% (79/79), done.\n",
             "/content/SRGAN_Test\n",
             "/content/SRGAN_Test\n"
           ],
@@ -306,7 +306,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cc81662d-8ef5-4739-c762-a78532231bfe"
+        "outputId": "1eae7bbd-d754-4ac2-beff-60218fe7d3e4"
       },
       "source": [
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
@@ -316,40 +316,40 @@
         "!rm DIV2K_train_HR.zip\n",
         "!rm DIV2K_valid_HR.zip"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-02-01 06:49:15--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
+            "--2021-02-01 10:29:01--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
             "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
             "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip [following]\n",
-            "--2021-02-01 06:49:15--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
+            "--2021-02-01 10:29:02--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
             "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 3530603713 (3.3G) [application/zip]\n",
             "Saving to: ‘DIV2K_train_HR.zip’\n",
             "\n",
-            "DIV2K_train_HR.zip  100%[===================>]   3.29G  17.8MB/s    in 3m 0s   \n",
+            "DIV2K_train_HR.zip  100%[===================>]   3.29G  19.2MB/s    in 2m 55s  \n",
             "\n",
-            "2021-02-01 06:52:16 (18.7 MB/s) - ‘DIV2K_train_HR.zip’ saved [3530603713/3530603713]\n",
+            "2021-02-01 10:31:58 (19.3 MB/s) - ‘DIV2K_train_HR.zip’ saved [3530603713/3530603713]\n",
             "\n",
-            "--2021-02-01 06:52:16--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
+            "--2021-02-01 10:31:58--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
             "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
             "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip [following]\n",
-            "--2021-02-01 06:52:17--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
+            "--2021-02-01 10:31:58--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
             "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 448993893 (428M) [application/zip]\n",
             "Saving to: ‘DIV2K_valid_HR.zip’\n",
             "\n",
-            "DIV2K_valid_HR.zip  100%[===================>] 428.19M  19.2MB/s    in 24s     \n",
+            "DIV2K_valid_HR.zip  100%[===================>] 428.19M  19.6MB/s    in 23s     \n",
             "\n",
-            "2021-02-01 06:52:41 (18.1 MB/s) - ‘DIV2K_valid_HR.zip’ saved [448993893/448993893]\n",
+            "2021-02-01 10:32:22 (18.7 MB/s) - ‘DIV2K_valid_HR.zip’ saved [448993893/448993893]\n",
             "\n"
           ],
           "name": "stdout"
@@ -406,7 +406,7 @@
       "source": [
         "!pip install torchvision==0.5"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,7 +445,7 @@
       "source": [
         "!pip install torch==1.4"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,13 +471,13 @@
         "  --use_cuda 1 \\\n",
         "  --batch_size 1 \\\n",
         "  --snapshots_folder /content/SRGAN_Test/snapshots/ \\\n",
-        "  --snapshots_train_data Epoch_4_TrainTimes_240000 \\\n",
+        "  --snapshots_train_data Epoch_4_TrainTimes_240000.pth \\\n",
         "  --train_path /content/SRGAN_Test/data/DIV2K_train_HR/ \\\n",
         "  --valid_path /content/SRGAN_Test/data/DIV2K_valid_HR/ \\\n",
         "  --statistics_path statistics/ \\\n",
         "  --epochs_path training_results/"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
