--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -21,7 +21,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "832dd310-312c-40e4-b8cd-a36ceedc4494"
+        "outputId": "7d48f674-5229-44d1-d30c-7638087557a5"
       },
       "source": [
         "!apt-get install -y -qq software-properties-common python-software-properties module-init-tools\n",
@@ -76,7 +76,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c3caf000-29bd-4bdc-a98b-5b293e44e7c0"
+        "outputId": "2f7784c8-3607-41d0-e141-b8d5691840a6"
       },
       "source": [
         "# memory footprint support libraries/code\n",
@@ -97,7 +97,7 @@
         " print(\"GPU RAM Free: {0:.0f}MB | Used: {1:.0f}MB | Util {2:3.0f}% | Total {3:.0f}MB\".format(gpu.memoryFree, gpu.memoryUsed, gpu.memoryUtil*100, gpu.memoryTotal))\n",
         "printm()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,14 +106,14 @@
             "  Downloading https://files.pythonhosted.org/packages/ed/0e/5c61eedde9f6c87713e89d794f01e378cfd9565847d4576fa627d758c554/GPUtil-1.4.0.tar.gz\n",
             "Building wheels for collected packages: gputil\n",
             "  Building wheel for gputil (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for gputil: filename=GPUtil-1.4.0-cp36-none-any.whl size=7411 sha256=a4c50b165815d6f9660efa7b15b108c1518d41cc994d7074b8b7c3e8a6e1dae3\n",
+            "  Created wheel for gputil: filename=GPUtil-1.4.0-cp36-none-any.whl size=7411 sha256=51280d5bef911902713b4ed3b81ea12b4a957308fa3dc2c5afcbd1232805f463\n",
             "  Stored in directory: /root/.cache/pip/wheels/3d/77/07/80562de4bb0786e5ea186911a2c831fdd0018bda69beab71fd\n",
             "Successfully built gputil\n",
             "Installing collected packages: gputil\n",
             "Successfully installed gputil-1.4.0\n",
             "Requirement already satisfied: psutil in /usr/local/lib/python3.6/dist-packages (5.4.8)\n",
             "Requirement already satisfied: humanize in /usr/local/lib/python3.6/dist-packages (0.5.1)\n",
-            "Gen RAM Free: 12.7 GB  | Proc size: 348.4 MB\n",
+            "Gen RAM Free: 12.7 GB  | Proc size: 350.2 MB\n",
             "GPU RAM Free: 15079MB | Used: 0MB | Util   0% | Total 15079MB\n"
           ],
           "name": "stdout"
@@ -227,7 +227,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2316d93a-1937-427e-eb44-80f5d13a94b3"
+        "outputId": "1b872e11-8672-4440-e029-41e5677d1c1e"
       },
       "source": [
         "# Load the Drive helper and mount\n",
@@ -235,7 +235,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +270,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9babc2df-47d7-4b9c-f0cb-5c9276eb0db0"
+        "outputId": "d8c0ee69-69c3-42ae-b25b-8af6e028a3e6"
       },
       "source": [
         "import sys\n",
@@ -281,17 +281,17 @@
         "%cd SRGAN_Test/\n",
         "!pwd  "
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'SRGAN_Test'...\n",
-            "remote: Enumerating objects: 3, done.\u001b[K\n",
-            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 79 (delta 0), reused 0 (delta 0), pack-reused 76\u001b[K\n",
-            "Unpacking objects: 100% (79/79), done.\n",
+            "remote: Enumerating objects: 10, done.\u001b[K\n",
+            "remote: Counting objects: 100% (10/10), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
+            "remote: Total 86 (delta 3), reused 0 (delta 0), pack-reused 76\u001b[K\n",
+            "Unpacking objects: 100% (86/86), done.\n",
             "/content/SRGAN_Test\n",
             "/content/SRGAN_Test\n"
           ],
@@ -302,11 +302,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BDRTN4ZlBpEd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1eae7bbd-d754-4ac2-beff-60218fe7d3e4"
+        "id": "BDRTN4ZlBpEd"
       },
       "source": [
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
@@ -317,44 +313,7 @@
         "!rm DIV2K_valid_HR.zip"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2021-02-01 10:29:01--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
-            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
-            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip [following]\n",
-            "--2021-02-01 10:29:02--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
-            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 3530603713 (3.3G) [application/zip]\n",
-            "Saving to: ‘DIV2K_train_HR.zip’\n",
-            "\n",
-            "DIV2K_train_HR.zip  100%[===================>]   3.29G  19.2MB/s    in 2m 55s  \n",
-            "\n",
-            "2021-02-01 10:31:58 (19.3 MB/s) - ‘DIV2K_train_HR.zip’ saved [3530603713/3530603713]\n",
-            "\n",
-            "--2021-02-01 10:31:58--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
-            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
-            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip [following]\n",
-            "--2021-02-01 10:31:58--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
-            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 448993893 (428M) [application/zip]\n",
-            "Saving to: ‘DIV2K_valid_HR.zip’\n",
-            "\n",
-            "DIV2K_valid_HR.zip  100%[===================>] 428.19M  19.6MB/s    in 23s     \n",
-            "\n",
-            "2021-02-01 10:32:22 (18.7 MB/s) - ‘DIV2K_valid_HR.zip’ saved [448993893/448993893]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -397,41 +356,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gunmjw5QLaPS",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f9b818a2-f7de-42ce-cb9d-670a94547749"
+        "id": "Gunmjw5QLaPS"
       },
       "source": [
         "!pip install torchvision==0.5"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting torchvision==0.5\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7e/90/6141bf41f5655c78e24f40f710fdd4f8a8aff6c8b7c6f0328240f649bdbe/torchvision-0.5.0-cp36-cp36m-manylinux1_x86_64.whl (4.0MB)\n",
-            "\u001b[K     |████████████████████████████████| 4.0MB 8.8MB/s \n",
-            "\u001b[?25hCollecting torch==1.4.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/24/19/4804aea17cd136f1705a5e98a00618cb8f6ccc375ad8bfa437408e09d058/torch-1.4.0-cp36-cp36m-manylinux1_x86_64.whl (753.4MB)\n",
-            "\u001b[K     |████████████████████████████████| 753.4MB 15kB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (1.19.5)\n",
-            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (7.0.0)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision==0.5) (1.15.0)\n",
-            "Installing collected packages: torch, torchvision\n",
-            "  Found existing installation: torch 1.7.0+cu101\n",
-            "    Uninstalling torch-1.7.0+cu101:\n",
-            "      Successfully uninstalled torch-1.7.0+cu101\n",
-            "  Found existing installation: torchvision 0.8.1+cu101\n",
-            "    Uninstalling torchvision-0.8.1+cu101:\n",
-            "      Successfully uninstalled torchvision-0.8.1+cu101\n",
-            "Successfully installed torch-1.4.0 torchvision-0.5.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -459,6 +390,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "aOh9TfoMlzkU",
+        "outputId": "8c5f147e-cde5-4d90-8b95-aaee5c4d82f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Init Date time\n",
+        "from datetime import datetime\n",
+        "now = datetime.now()\n",
+        "\n",
+        "#Set Training Path\n",
+        "traininPaht = \"/content/drive/MyDrive/SRGAN/training_results/\" + datetime.strftime(now,'%Y-%m-%d_%H:%M:%S') \n",
+        "!mkdir $traininPaht\n",
+        "traininPaht = traininPaht + '/'\n",
+        "\n",
+        "statisticsPaht = \"/content/drive/MyDrive/SRGAN/statistics/\"+datetime.strftime(now,'%Y-%m-%d_%H:%M:%S')\n",
+        "!mkdir $statisticsPaht\n",
+        "statisticsPaht = statisticsPaht + '/'"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mkdir: cannot create directory ‘/content/drive/MyDrive/SRGAN/statistics/2021-02-02_02:40:53’: No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "TDgDNUJ0GfJ0",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -474,8 +439,8 @@
         "  --snapshots_train_data Epoch_4_TrainTimes_240000.pth \\\n",
         "  --train_path /content/SRGAN_Test/data/DIV2K_train_HR/ \\\n",
         "  --valid_path /content/SRGAN_Test/data/DIV2K_valid_HR/ \\\n",
-        "  --statistics_path statistics/ \\\n",
-        "  --epochs_path training_results/"
+        "  --statistics_path $statisticsPaht/ \\\n",
+        "  --epochs_path $traininPaht/"
       ],
       "execution_count": null,
       "outputs": [
