--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -48,7 +48,7 @@
         "import sys\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         " print(\"GPU RAM Free: {0:.0f}MB | Used: {1:.0f}MB | Util {2:3.0f}% | Total {3:.0f}MB\".format(gpu.memoryFree, gpu.memoryUsed, gpu.memoryUtil*100, gpu.memoryTotal))\n",
         "printm()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +235,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +281,7 @@
         "%cd SRGAN_Test/\n",
         "!pwd  "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BDRTN4ZlBpEd"
+        "id": "BDRTN4ZlBpEd",
+        "outputId": "51d2d88e-7b7f-4657-ea01-487302d135f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
@@ -312,8 +316,45 @@
         "!rm DIV2K_train_HR.zip\n",
         "!rm DIV2K_valid_HR.zip"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-02-02 07:10:56--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
+            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip [following]\n",
+            "--2021-02-02 07:10:56--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3530603713 (3.3G) [application/zip]\n",
+            "Saving to: ‘DIV2K_train_HR.zip’\n",
+            "\n",
+            "DIV2K_train_HR.zip  100%[===================>]   3.29G  19.8MB/s    in 2m 52s  \n",
+            "\n",
+            "2021-02-02 07:13:49 (19.6 MB/s) - ‘DIV2K_train_HR.zip’ saved [3530603713/3530603713]\n",
+            "\n",
+            "--2021-02-02 07:13:49--  http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
+            "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:80... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip [following]\n",
+            "--2021-02-02 07:13:49--  https://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_valid_HR.zip\n",
+            "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 448993893 (428M) [application/zip]\n",
+            "Saving to: ‘DIV2K_valid_HR.zip’\n",
+            "\n",
+            "DIV2K_valid_HR.zip  100%[===================>] 428.19M  20.2MB/s    in 23s     \n",
+            "\n",
+            "2021-02-02 07:14:13 (19.0 MB/s) - ‘DIV2K_valid_HR.zip’ saved [448993893/448993893]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -390,11 +431,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aOh9TfoMlzkU",
-        "outputId": "8c5f147e-cde5-4d90-8b95-aaee5c4d82f1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "aOh9TfoMlzkU"
       },
       "source": [
         "# Init Date time\n",
@@ -410,16 +447,8 @@
         "!mkdir $statisticsPaht\n",
         "statisticsPaht = statisticsPaht + '/'"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "mkdir: cannot create directory ‘/content/drive/MyDrive/SRGAN/statistics/2021-02-02_02:40:53’: No such file or directory\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 5,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -428,29 +457,35 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b6b0345-be67-429d-ba89-470ca209fae6"
+        "outputId": "ba8ef8fd-cb74-472e-efa3-698d697df19d"
       },
       "source": [
         "! python train.py \\\n",
         "  --num_epochs 100 \\\n",
         "  --use_cuda 1 \\\n",
         "  --batch_size 1 \\\n",
-        "  --snapshots_folder /content/SRGAN_Test/snapshots/ \\\n",
+        "  --snapshots_folder /content/drive/MyDrive/SRGAN/snapshots/ \\\n",
         "  --snapshots_train_data Epoch_4_TrainTimes_240000.pth \\\n",
         "  --train_path /content/SRGAN_Test/data/DIV2K_train_HR/ \\\n",
         "  --valid_path /content/SRGAN_Test/data/DIV2K_valid_HR/ \\\n",
         "  --statistics_path $statisticsPaht/ \\\n",
         "  --epochs_path $traininPaht/"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Traceback (most recent call last):\n",
-            "  File \"train.py\", line 53, in <module>\n",
-            "    train_set = TrainDatasetFromFolder(TRAIN_PATH)\n",
-            "TypeError: __init__() missing 2 required positional arguments: 'bk_width' and 'bk_height'\n"
+            "  File \"train.py\", line 67, in <module>\n",
+            "    netG.load_state_dict(torch.load(TRAIN_RESULT_FOLDER + TRAIN_RESULT_PARAMETERS))\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/torch/serialization.py\", line 581, in load\n",
+            "    with _open_file_like(f, 'rb') as opened_file:\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/torch/serialization.py\", line 230, in _open_file_like\n",
+            "    return _open_file(name_or_buffer, mode)\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/torch/serialization.py\", line 211, in __init__\n",
+            "    super(_open_file, self).__init__(open(name, mode))\n",
+            "FileNotFoundError: [Errno 2] No such file or directory: '/content/SRGAN_Test/snapshots/Epoch_4_TrainTimes_240000.pth'\n"
           ],
           "name": "stdout"
         }
