--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -177,30 +177,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6c4c9935-d8fd-4d90-9007-33ded31f74af"
+        "outputId": "8f3a66e9-43d4-42e6-bafc-99866e5d8bf5"
       },
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mon Feb  1 06:03:02 2021       \n",
+            "Tue Feb  2 07:48:50 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 418.67       Driver Version: 418.67       CUDA Version: 10.1     |\n",
+            "| NVIDIA-SMI 460.32.03    Driver Version: 418.67       CUDA Version: 10.1     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
             "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   44C    P8    10W /  70W |      0MiB / 15079MiB |      0%      Default |\n",
+            "| N/A   36C    P8     9W /  70W |      0MiB / 15079MiB |      0%      Default |\n",
+            "|                               |                      |                 ERR! |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
             "+-----------------------------------------------------------------------------+\n",
-            "| Processes:                                                       GPU Memory |\n",
-            "|  GPU       PID   Type   Process name                             Usage      |\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
             "|=============================================================================|\n",
             "|  No running processes found                                                 |\n",
             "+-----------------------------------------------------------------------------+\n"
@@ -303,10 +306,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BDRTN4ZlBpEd",
-        "outputId": "51d2d88e-7b7f-4657-ea01-487302d135f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "51d2d88e-7b7f-4657-ea01-487302d135f0"
       },
       "source": [
         "!wget http://data.vision.ee.ethz.ch/cvl/DIV2K/DIV2K_train_HR.zip\n",
@@ -397,13 +400,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gunmjw5QLaPS"
+        "id": "Gunmjw5QLaPS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "552a455a-b7e2-4a3f-a494-763c5bd1cb41"
       },
       "source": [
-        "!pip install torchvision==0.5"
+        "!pip install torchvision==0.7"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting torchvision==0.7\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/8e/dc/4a939cfbd38398f4765f712576df21425241020bfccc200af76d19088533/torchvision-0.7.0-cp36-cp36m-manylinux1_x86_64.whl (5.9MB)\n",
+            "\u001b[K     |████████████████████████████████| 5.9MB 6.3MB/s \n",
+            "\u001b[?25hCollecting torch==1.6.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/38/53/914885a93a44b96c0dd1c36f36ff10afe341f091230aad68f7228d61db1e/torch-1.6.0-cp36-cp36m-manylinux1_x86_64.whl (748.8MB)\n",
+            "\u001b[K     |████████████████████████████████| 748.8MB 24kB/s \n",
+            "\u001b[?25hRequirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision==0.7) (7.0.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torchvision==0.7) (1.19.5)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from torch==1.6.0->torchvision==0.7) (0.16.0)\n",
+            "Installing collected packages: torch, torchvision\n",
+            "  Found existing installation: torch 1.7.0\n",
+            "    Uninstalling torch-1.7.0:\n",
+            "      Successfully uninstalled torch-1.7.0\n",
+            "  Found existing installation: torchvision 0.8.0\n",
+            "    Uninstalling torchvision-0.8.0:\n",
+            "      Successfully uninstalled torchvision-0.8.0\n",
+            "Successfully installed torch-1.6.0 torchvision-0.7.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -412,17 +443,41 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3b750548-c57a-4750-b149-fac868da9cf2"
+        "outputId": "1c3d9197-694a-410b-9cdc-d38c08fcb56d"
       },
       "source": [
-        "!pip install torch==1.4"
+        "!pip install torch==1.6"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: torch==1.4 in /usr/local/lib/python3.6/dist-packages (1.4.0)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_AjuBpzIuJ5Q",
+        "outputId": "c3096654-e38f-47e6-b1ac-5738a74c2d88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pip install cudatoolkit=10.1"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[31mERROR: Invalid requirement: 'cudatoolkit=10.1'\n",
+            "Hint: = is not a valid operator. Did you mean == ?\u001b[0m\n"
           ],
           "name": "stdout"
         }
@@ -457,7 +512,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba8ef8fd-cb74-472e-efa3-698d697df19d"
+        "outputId": "e60f7ab6-fa1f-4bdd-b042-a7e4f02fa843"
       },
       "source": [
         "! python train.py \\\n",
@@ -471,21 +526,13 @@
         "  --statistics_path $statisticsPaht/ \\\n",
         "  --epochs_path $traininPaht/"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Traceback (most recent call last):\n",
-            "  File \"train.py\", line 67, in <module>\n",
-            "    netG.load_state_dict(torch.load(TRAIN_RESULT_FOLDER + TRAIN_RESULT_PARAMETERS))\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/torch/serialization.py\", line 581, in load\n",
-            "    with _open_file_like(f, 'rb') as opened_file:\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/torch/serialization.py\", line 230, in _open_file_like\n",
-            "    return _open_file(name_or_buffer, mode)\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/torch/serialization.py\", line 211, in __init__\n",
-            "    super(_open_file, self).__init__(open(name, mode))\n",
-            "FileNotFoundError: [Errno 2] No such file or directory: '/content/SRGAN_Test/snapshots/Epoch_4_TrainTimes_240000.pth'\n"
+            "# discriminator parameters: 5215425\n",
+            "  0% 0/800 [00:00<?, ?it/s]before train bar\n"
           ],
           "name": "stdout"
         }
