--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -324,7 +324,7 @@
         "!mkdir $statisticsPaht\n",
         "statisticsPaht = statisticsPaht + '/'"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -342,7 +342,9 @@
         "  --train_path /content/SRGAN_Test/data/DIV2K_train_HR/ \\\n",
         "  --valid_path /content/SRGAN_Test/data/DIV2K_valid_HR/ \\\n",
         "  --statistics_path $statisticsPaht/ \\\n",
-        "  --epochs_path $traininPaht/"
+        "  --epochs_path $traininPaht/ \\\n",
+        "  --willy_test 0 \\\n",
+        "  --do_resize 1"
       ],
       "execution_count": null,
       "outputs": []
@@ -378,6 +380,17 @@
         "!cp -R ./training_results ../drive/My\\ Drive/"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F4-3f1WlC_X4"
+      },
+      "source": [
+        "!rm *.bmp"
+      ],
+      "execution_count": 11,
       "outputs": []
     }
   ]
